--- a/front-end/src/Style/style.css
+++ b/front-end/src/Style/style.css
@@ -1,3 +1,7 @@
+body {
+   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ; 
+   font-size: large;
+}
 
 .center-div {
    margin-left: 5rem;
@@ -8,6 +12,21 @@
 }
 
 .center-text {
+   display: inline;
+   text-align: center;
+}
+
+.center-text {
    display: block;
    text-align: center;
+}
+
+.card {
+   border-radius: 10%;
+   padding: 1rem;
+   margin: 1rem;
+   display: inline-flex;
+   text-align: center;
+   font-size: 1rem;
+   background-color:aquamarine;
 }
