--- a/front-end/src/Style/style.css
+++ b/front-end/src/Style/style.css
@@ -1,7 +1,9 @@
 body {
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ; 
-   font-size: large;
-}
+   font-size: x-large;
+   background-color: black;
+   
+} 
 
 .center-div {
    margin-left: 5rem;
@@ -9,11 +11,10 @@ body {
    margin-top: 5rem;
    display: flex;
    justify-content: center;
-}
-
-.center-text {
-   display: inline;
-   text-align: center;
+   padding: 2rem;
+   background-color: rgba(0, 0, 0, .5);
+   color: white;
+   
 }
 
 .center-text {
@@ -28,5 +29,9 @@ body {
    display: inline-flex;
    text-align: center;
    font-size: 1rem;
-   background-color:aquamarine;
+   
+}
+
+.icons i {
+   padding: 1rem;
 }
