--- a/front-end/src/Style/style.css
+++ b/front-end/src/Style/style.css
@@ -1,9 +1,24 @@
-body {
-   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ; 
-   font-size: x-large;
+p {
+   color: white;
+}
+html,
+body,
+#root { 
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  padding: 0;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  overflow: visible; 
    background-color: black;
-   
 } 
+
 
 .center-div {
    margin-left: 5rem;
