--- a/front-end/src/Style/style.css
+++ b/front-end/src/Style/style.css
@@ -1,21 +1,39 @@
 .loading {
-   margin-left: 5rem;
-   margin-right: 5rem; 
-   margin-top: 5rem;
-   display: flex;
-   justify-content: center;
-   padding: 2rem;
-   background-color: rgba(0, 0, 0, .5);
-   color: white;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  margin-top: 5rem;
+  display: flex;
+  justify-content: center;
+  padding: 2rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
 }
 
+/* Text for rest of the planets */
 .planetText {
-   color: white;
-   font-size: 10px;
+  color: white;
+  font-size: 10px;
 }
+
+/* Black text for earthy planet */
+.planetText-blog {
+  color: black;
+  font-size: 10px;
+}
+
+.icons {
+   background-color: aliceblue;
+   font-size: 100px;
+   
+}
+
+.not-found {
+   color:white; 
+}
+
 html,
 body,
-#root { 
+#root {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -27,27 +45,25 @@ body,
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  overflow: visible; 
-   background-color: black;
-} 
+  overflow: visible;
+  background-color: black;
+}
 
-.center-div{
-   line-height: 2;
-   color: black;
-   font-size: 2rem;
+.center-div {
+  line-height: 2;
+  color: black;
+  font-size: 2rem;
 }
 
 @media screen and (max-width: 700px) {
- 
-   .center-div {
-      line-height: normal;
-      font-size: 1.5rem;
-   }
+  .center-div {
+    line-height: normal;
+    font-size: 1.5rem;
+  }
 }
 
-@media  screen and (max-width: 350px) {
-   .center-div {
-      font-size: 1rem;
-   }
+@media screen and (max-width: 350px) {
+  .center-div {
+    font-size: 1rem;
+  }
 }
-
