--- a/front-end/src/Style/style.css
+++ b/front-end/src/Style/style.css
@@ -1,6 +1,25 @@
+
+/* Font from google fonts */
+@font-face {
+  font-family: Gideon;
+  src: url(./Fonts/Gideon_Roman/GideonRoman-Regular.ttf);
+}
+
+html,
+body,
+#root {
+  font-family: Gideon, "Courier New", Courier, monospace;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  padding: 0;
+  background-color: black;
+}
+
 .center-div {
   margin-left: 3rem;
-  margin-right:3rem;
+  margin-right: 3rem;
   margin-top: 3rem;
   display: flex;
   justify-content: center;
@@ -11,8 +30,9 @@
 
 /* Text for rest of the planets */
 .planetText {
+  
   color: white;
-  font-size: 10px;
+  font-size: 8px;
 }
 
 /* Black text for earthy planet */
@@ -27,6 +47,7 @@
   text-align: center;
   color: black;
   font-size: 2rem;
+
   padding: 1rem;
 }
 
@@ -35,38 +56,40 @@
   padding: 1rem;
   color: white;
   font-size: 2rem;
-  
 }
-.move-around{
+.move-around {
   font-size: 1rem;
+
   color: white;
 }
 .not-found {
-   color:white; 
+  color: white;
 }
 
-html,
-body,
-#root {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  padding: 0;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  overflow: visible;
-  background-color: black;
+.about-me {
+  padding: 1rem;
+  text-align: justify;
+  color: navy;
+  font-size: 2rem;
+  line-height: 1.5;
 }
+
+.icons i {
+  padding-left: 2rem;
+}
+
 
 
 @media screen and (max-width: 700px) {
   .home {
-    width: 50rem; 
+    width: 50rem;
+  }
+
+  .about-me{
+    width: 50rem;
+    font-size: 2rem;
+    line-height: 1.5;
+    
   }
   .center-div {
     line-height: normal;
@@ -78,7 +101,7 @@ body,
   .home {
     width: 30rem;
   }
-  
+
   .center-div {
     font-size: 1rem;
   }
