Projects and Blog on backend working

--- a/front-end/src/Style/style.css
+++ b/front-end/src/Style/style.css
@@ -73,7 +73,7 @@ body,
   line-height: 2;
 }
 
-.icons i {
+.icons a {
   padding-left: 2rem;
 }
 
@@ -116,6 +116,19 @@ body,
   font-size: 2rem;
   line-height: 2;
   justify-content: center;
+}
+
+.projectPost {
+  display: block;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 1rem;
+  font-size: 2rem;
+  line-height: 2;
+  justify-content: center;
+}
+
+.projectPost a{
+  margin:1rem; 
 }
 
 
