--- a/front-end/src/Style/style.css
+++ b/front-end/src/Style/style.css
@@ -117,8 +117,9 @@ body,
 
 .projectPost {
   display: block;
-  background-color: rgba(255, 255, 255, 0.5);
-  padding: 1rem;
+  background-color: rgb(255, 255, 255);
+  padding: 2rem;
+  margin: 2rem;
   font-size: 2rem;
   line-height: 2;
   justify-content: center;
