--- a/front-end/src/Style/style.css
+++ b/front-end/src/Style/style.css
@@ -1,11 +1,15 @@
 
 
 /* Font from google fonts */
+@font-face {
+  font-family: Gideion;
+  src: url(./Fonts/Gideon_Roman/GideonRoman-Regular.ttf);
+}
 
 html,
 body,
 #root {
-  font-family: "Courier New", Courier, monospace;
+  font-family: Gideion "Courier New", Courier, monospace;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -48,10 +52,11 @@ body,
 }
 
 .enter-button {
+  margin-top: 1rem;
   background-color: red;
   padding: 1rem;
   color: white;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 .move-around {
   font-size: 1rem;
@@ -68,10 +73,20 @@ body,
   color: black;
   font-size: 2.5rem;
   line-height: 2;
+  
 }
 
-.icons a {
-  padding-left: 2rem;
+.desktop {
+  height: 100%;
+}
+
+.mobile {
+  display: none;
+}
+
+.icons i {
+  margin-right: 2rem;
+  margin-bottom: 2rem;
 }
 
 .projects {
@@ -83,13 +98,6 @@ body,
   justify-content: center;
 }
  
-.projects img {
-  
-  width: 70rem;
-  border: 0.2rem;
-  border-color: black;
-  border-style: solid;
-}  
 
 .skills {
   text-align: justify;
@@ -257,15 +265,43 @@ textarea{
 
 @media screen and (max-width: 800px) {
   .home {
-    width: 50rem;
+    
+    width: 70rem;
   }
 
   .about-me{
-    width: 50rem;
+    text-align: center;
+    background-color: white;
     font-size: 2rem;
-    line-height: 2;
+    line-height: 1;
+  }
+  .desktop{
+    display: none;
+  }
+
+  .mobile{
+    display: block;
+  }
+  .icons a {
+    padding-left: .5rem;
     
   }
+
+  .projects {
+    width: 70rem;
+  }
+
+  .projectPost {
+    width: 50rem;
+    display: block;
+    background-color: rgb(255, 255, 255);
+    padding: 2rem;
+    margin: 2rem;
+    font-size: 2rem;
+    line-height: 2;
+    justify-content: center;
+  }
+
   .center-div {
     line-height: normal;
     font-size: 1.5rem;
@@ -274,12 +310,36 @@ textarea{
 
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 450px) {
   .home {
-    width: 30rem;
+    width: 50rem;
   }
 
   .center-div {
     font-size: 1rem;
+  }
+
+  .projects {
+    width: 50rem;
+  }
+
+  .projectPost {
+    width: 30rem;
+    display: block;
+    background-color: rgb(255, 255, 255);
+    padding: 2rem;
+    margin: 2rem;
+    font-size: 2rem;
+    line-height: 2;
+    justify-content: center;
+  }
+
+
+  .blog {
+    width: 30rem;
+  }
+
+  .blogPost{
+    width: 30rem;
   }
 }
