--- a/front-end/src/Style/style.css
+++ b/front-end/src/Style/style.css
@@ -1,15 +1,10 @@
 
 
-/* Font from google fonts */
-@font-face {
-  font-family: Gideion;
-  src: url(./Fonts/Gideon_Roman/GideonRoman-Regular.ttf);
-}
 
 html,
 body,
 #root {
-  font-family: Gideion "Courier New", Courier, monospace;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -29,6 +24,25 @@ body,
   color: white;
 }
 
+.header {
+  background-color: white;
+  padding: .5rem;
+}
+
+.navigation {
+  font-size: 2rem;
+  display: inline;
+  margin-left: 4rem;
+}
+
+
+.link {
+  margin-left: 2rem;
+}
+
+.icons{
+  display: inline;
+}
 /* Text for rest of the planets */
 .planetText {
   
@@ -82,11 +96,10 @@ body,
 }
 
 .projects {
+  
   display: block;
   background-color: rgba(255, 255, 255);
-  padding: 1rem;
-  font-size: 3rem;
-  line-height: 2;
+  font-size: 2em;
   justify-content: center;
 }
  
@@ -255,6 +268,12 @@ textarea{
  text-align: center;
 }
 
+@media  screen and (max-width: 1162px) {
+  .navigation {
+    font-size: 1rem;
+  }
+}
+
 @media screen and (max-width: 800px) {
   .home {
     width: 70rem;
@@ -268,13 +287,18 @@ textarea{
     line-height: 1;
   }
  
-  .icons a {
-    padding-left: .5rem;
-    
-  }
-
+  
   .projects {
     width: 70rem;
+  }
+
+  .header {
+    font-size: 0.5rem;
+  
+  }
+
+  .icons i {
+    margin-right: 1rem;
   }
 
   .projectPost {
@@ -299,6 +323,16 @@ textarea{
   }
 
 
+}
+
+@media screen and (max-width: 730px) {
+  .navigation {
+    display: block; 
+    margin-left: 1rem;
+  }
+  .link {
+    margin-left: 1rem;
+  }
 }
 
 @media screen and (max-width: 450px) {
