--- a/front-end/src/Style/style.css
+++ b/front-end/src/Style/style.css
@@ -99,8 +99,19 @@ body,
   
   display: block;
   background-color: rgba(255, 255, 255);
-  font-size: 2em;
+  font-size: 2rem;
   justify-content: center;
+}
+
+.projects a {
+  font-size: 1rem;
+}
+
+.pageNumber {
+  font-size: 2rem;
+  margin-left: 2rem;
+  padding: 1rem;
+  background-color: gray;
 }
  
 
