Fixed <canvas> issue, and added tailwind css

--- a/front-end/src/Style/style.css
+++ b/front-end/src/Style/style.css
@@ -1,382 +1,5 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-
-
-html,
-body,
-#root {
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  padding: 0;
-  background-color: black;
-}
-
-.center-div {
-  margin-left: 3rem;
-  margin-right: 3rem;
-  margin-top: 3rem;
-  display: flex;
-  justify-content: center;
-  padding: 2rem;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-}
-
-.header {
-  background-color: white;
-  padding: .5rem;
-}
-
-.navigation {
-  font-size: 2rem;
-  display: inline;
-  margin-left: 4rem;
-}
-
-
-.link {
-  margin-left: 2rem;
-}
-
-.icons{
-  display: inline;
-}
-/* Text for rest of the planets */
-.planetText {
-  
-  color: white;
-  font-size: 8px;
-}   
-
-/* Black text for earthy planet */
-.planetText-blog {
-  color: black;
-  font-size: 10px;
-}
-
-.home {
-  border-radius: 5%;
-  background-color: white;
-  text-align: center;
-  color: black;
-  font-size: 2rem;
-  padding: 1rem;
-}
-
-.enter-button {
-  margin-top: 1rem;
-  background-color: red;
-  padding: 1rem;
-  color: white;
-  font-size: 3rem;
-}
-.move-around {
-  font-size: 1rem;
-
-  color: white;
-}
-.not-found {
-  color: white;
-}
-
-.about-me {
-  padding: 1rem;
-  text-align: justify;
-  color: black;
-  font-size: 2.5rem;
-  line-height: 2;
-  
-}
-
-.icons i {
-  margin-right: 2rem;
-  margin-bottom: 2rem;
-}
-
-.projects {
-  
-  display: block;
-  background-color: rgba(255, 255, 255);
-  font-size: 2rem;
-  justify-content: center;
-}
-
-.projects a {
-  font-size: 1rem;
-}
-
-.pageNumber {
-  font-size: 2rem;
-  margin-left: 2rem;
-  padding: 1rem;
-  background-color: gray;
-}
- 
-
-.skills {
-  text-align: justify;
-  width: 30rem;
-  background-color: white;
-  padding: 1rem; 
-  font-size: 3rem;
-}
-
-.blogList{
-  display: block;
-  background-color: rgba(255, 255, 255, 0.5);
-  font-size: 1.5rem;
-  padding: 1rem; 
-}
-
-.blogPost {
-  display: block;
-  background-color: rgba(255, 255, 255, 0.5);
-  padding: 1rem;
-  font-size: 2rem;
-  line-height: 2;
-  justify-content: center;
-}
-
-.projectPost {
-  display: block;
-  background-color: rgb(255, 255, 255);
-  padding: 2rem;
-  margin: 2rem;
-  font-size: 2rem;
-  line-height: 2;
-  justify-content: center;
-}
-
-.projectPost a{
-  margin:1rem; 
-}
-
-.contact-form{
-  background-color: white;
-  font-size: 2rem;
-  padding: 2rem
-}
-
-.contact-form button{
-  font-size: 2rem;
-  margin-top: 1rem;
-  background-color: green;
-}
-
-
-/* =============BACK END ADMIN PAGE ========================= */
-.signin {
-  display: flexbox;
-  padding: 5rem;
-  text-align: center;
-  background-color: white;
-}
-form{
-  margin: 2rem;
-}
-
-label {
-  display: block;
-  font-weight: 300;
-  margin-bottom: 1rem;
-  margin-top: 2rem;
-}
-
-input {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  color: #332a40;
-  border-radius: .5rem;
-  border: 1px solid #8c789b;
-  padding: .5rem;
-  margin-bottom: 1rem;
-  font-size: 2rem;
-}
-textarea{
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  width: 30rem;
-  height: 20rem;
-  font-size: 2rem;
-}
-
-.tech {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  width: 30rem;
-  height: 5rem;
-}
-
-/* =========Main Admin Page =========== */
-.admin{
-  padding: 5rem;
-  background-color: white;
-  height: 100%;
-}
-
-.admin-buttons button{
- margin: 2rem; 
- padding: 1rem; 
-}
-
-.delete {
-  background-color: red;
-  color: white;
-}
-
-.edit {
-  background-color: blue;
-  color: white;
-  margin-left: 1rem;
-}
-.col {
-  float: left;
-  margin: 5rem;
-  width: fit-content;
-}
-.List {
-  padding: 1rem;
-  font-size: 1rem;
-  text-align: center;
-  border-radius: .5rem;
-  border: 2px solid black;
-}
-
-.List h1{
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-
-/* ======Post Blog Page============ */
-.post-blog{
-  font-size: 2rem;
-  text-align: center;
-  background-color: white;
-  height: 100%;
-}
-
-
-.addProject {
-  margin-left: 2rem;
-  font-size: 1rem;
-  background-color:rgba(60, 39, 245, 0.712)
-}
-
-/* ===============Mail DETAILED ============== */
-
-.mail-detail {
-  padding: 2rem;
-  font-size: 2rem;
-  background-color: white;
-  height: 100%;
- text-align: center;
-}
-
-@media  screen and (max-width: 1162px) {
-  .navigation {
-    font-size: 1rem;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .home {
-    width: 70rem;
-  }
-
-  .about-me{
-    margin-top: 20rem; 
-    width: 50rem;
-    text-align: center;
-    font-size: 3rem;
-    line-height: 1;
-  }
- 
-  
-  .projects {
-    width: 70rem;
-  }
-
-  .header {
-    font-size: 0.5rem;
-  
-  }
-
-  .icons i {
-    margin-right: 1rem;
-  }
-
-  .projectPost {
-    margin-top: 10rem;
-    width: 50rem;
-    display: block;
-    background-color: rgb(255, 255, 255);
-    padding: 2rem;
-    font-size: 2rem;
-    line-height: 2;
-    justify-content: center;
-  }
-
-  .blogPost{
-    margin-top: 20rem;
-  }
-
-
-  .center-div {
-    line-height: normal;
-    font-size: 1.5rem;
-  }
-
-
-}
-
-@media screen and (max-width: 730px) {
-  .navigation {
-    display: block; 
-    margin-left: 1rem;
-  }
-  .link {
-    margin-left: 1rem;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .home {
-    width: 50rem;
-  }
-
-  .center-div {
-    font-size: 1rem;
-  }
-
-  .projects {
-    width: 50rem;
-  }
-
-  .projectPost {
-    margin-top: 10rem;
-    width: 30rem;
-    display: block;
-    background-color: rgb(255, 255, 255);
-    padding: 2rem;
-    font-size: 2rem;
-    line-height: 2;
-    justify-content: center;
-  }
-
-
-  .blog {
-    width: 30rem;
-  }
-
-  .blogPost{
-    width: 30rem;
-  }
-}
 
